Fix box-shadow overflowing in the title box of the cards in Safari

--- a/styles/public/card-containers.scss
+++ b/styles/public/card-containers.scss
@@ -67,6 +67,7 @@
 			width: 100%;
 			padding: 0;
 			overflow: hidden;
+			-webkit-mask-image: -webkit-radial-gradient(white, black); // Safari fix
 
 			.wp-block-cover__background {
 				display: none;
